--- a/assets/css/src/style.scss
+++ b/assets/css/src/style.scss
@@ -1211,6 +1211,10 @@ button {
 
     .more-toggle {
       border-bottom: 1px solid $black;
+
+      &:hover {
+        border-bottom-color: transparent;
+      }
     }
 
     p {
