--- a/assets/css/src/style.scss
+++ b/assets/css/src/style.scss
@@ -1249,7 +1249,7 @@ button {
 }
 
 @media only screen and (max-width: 1024px) {
-  .roster {
+  .post-type-archive-roster {
     .people {
       margin: 0 4vw;
     }
@@ -1487,7 +1487,7 @@ button {
     }
   }
 
-  .roster {
+  .post-type-archive-roster {
 
     .modals {
 
