--- a/assets/css/src/style.scss
+++ b/assets/css/src/style.scss
@@ -1489,48 +1489,6 @@ button {
 
   .post-type-archive-roster {
 
-    .modals {
-
-      .person {
-        display: flex;
-        position: fixed;
-        top: auto;
-        bottom: 0px;
-        left: 0px;
-        align-items: center;
-        justify-content: center;
-        width: 100vw;
-        height: 75vh;
-        padding: 0;
-        overflow: hidden;
-        backface-visibility: hidden;
-        opacity: 0;
-        pointer-events: none;
-        transition: 660ms opacity cubic-bezier(.165, .84, .44, 1);
-        will-change: opacity;
-        z-index: 100;
-
-        &.show {
-          opacity: 1;
-          pointer-events: all;
-        }
-
-        .modal-container {
-          -webkit-overflow-scrolling: touch;
-          position: relative;
-          width: 100%;
-          height: 100%;
-          max-height: 100%;
-          padding: $unit-4;
-          overflow: scroll;
-          background: rgba(235,0,69,.9);
-          color: $grey;
-          font-weight: 200;
-          line-height: 1.5;
-        }
-      }
-    }
-
     .people {
       display: block;
       margin: 0px;
@@ -1542,6 +1500,45 @@ button {
         margin-bottom: 0px;
         padding: $unit-4;
         padding-bottom: 0px;
+
+        .modal {
+          display: flex;
+          position: fixed;
+          top: auto;
+          bottom: 0px;
+          left: 0px;
+          align-items: center;
+          justify-content: center;
+          width: 100vw;
+          height: 75vh;
+          padding: 0;
+          overflow: hidden;
+          backface-visibility: hidden;
+          opacity: 0;
+          pointer-events: none;
+          transition: 660ms opacity cubic-bezier(.165, .84, .44, 1);
+          will-change: opacity;
+          z-index: 100;
+
+          &.show {
+            opacity: 1;
+            pointer-events: all;
+          }
+
+          .content {
+            -webkit-overflow-scrolling: touch;
+            position: relative;
+            width: 100%;
+            height: 100%;
+            max-height: 100%;
+            padding: $unit-4;
+            overflow: scroll;
+            background: rgba(235,0,69,.9);
+            color: $grey;
+            font-weight: 200;
+            line-height: 1.5;
+          }
+        }
       }
     }
 
