--- a/assets/css/src/style.scss
+++ b/assets/css/src/style.scss
@@ -120,10 +120,11 @@ body {
 }
 
 footer {
-  text-align: center;
-  background: $grey;
-  z-index: 1000;
-  position: relative;
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  line-height: 1;
+  text-align: left;
 
   p {
     padding: $unit-2;
@@ -131,12 +132,14 @@ footer {
   }
 
   a {
-    border-bottom: 1px solid $black;
-
-    &:hover {
-      border-bottom-color: $red;
-    }
   }
+}
+
+.video-container {
+  position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;
+}
+.video-container iframe, .video-container object, .video-container embed, .video-container video {
+  position: absolute; top: 0; left: 0; width: 100%; height: 100%;
 }
 
 .fade-wrap {
@@ -1239,12 +1242,9 @@ button {
       }
     }
 
-    p {
-      margin-right: 0;
-      margin-left: 0;
-    }
-
     button {
+      border-bottom: 1px solid $black;
+
       &:hover {
         border-bottom-color: transparent;
         color: $red;
@@ -1254,6 +1254,43 @@ button {
     .news-post {
       margin-bottom: $unit-4;
       padding-right: 12.5vw;
+
+      .image-modal {
+        height: 100vh;
+        width: 100vw;
+        padding: 8vw;
+        position: fixed;
+        top: 0px;
+        left: 0px;
+        background: rgba(0, 0, 0, .8);
+        z-index: 1000000;
+        opacity: 0;
+        pointer-events: none;
+        transition: 660ms opacity cubic-bezier(.165, .84, .44, 1);
+        will-change: opacity;
+
+        &.show {
+          opacity: 1;
+          pointer-events: all;
+        }
+
+        .close {
+          position: absolute;
+          top: 0px;
+          right: 0px;
+
+          button {
+            color: white;
+            border: none;
+          }
+        }
+
+        img {
+          height: 100%;
+          width: 100%;
+          object-fit: contain;
+        }
+      }
 
       .title {
         width: 70%;
